[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["danieldagot <51596364+danieldagot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
